# ZOO-Project

./: .dockerignore  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile-DRU  Dockerfile-MOZJS  Dockerfile-MS8  Dockerfile-OSGeoLive  Dockerfile-OTBTF  Dockerfile-UbuntuGIS  Dockerfile-libnode  Dockerfile_OSGeoLive  LICENSE.md  README.md  SECURITY.md  docker-compose.yml  keyGithub  keyGithub.pub  skaffold.yaml  values.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: docker-ciab-image.yml  docker-dru-image-ets.yml  docker-dru-image.yml  docker-hpgc-image.yml  docker-image.yml  docker-jammy-image.yml  docker-mdl4eo-image.yml  docker-ml4eo-image.yml  docker-mozjs-image.yml  docker-websocketd-image.yml  documentation-ci.yml  vulnerabilities.yml
debian/: changelog  control  copyright  rules  zoo-kernel.install  zoo-services.install
docker/: .htaccess  70-zoo-loader-cgi.conf  TrainRegression.zcfg  default.conf  definitions.json  main-demo.cfg  main.cfg  mapserver.conf  nginx-default.conf  nginx-start.sh  oas.cfg  startUp.sh  test_long_process.py
docker/ciab/: Dockerfile  docker-compose.yml  main.cfg  oas.cfg  requirements.txt
docker/com/: station1.gml  updateStatus.xsl
docker/crane/: Dockerfile  README.md  config_server.py
docker/dru/: Dockerfile  ades-dev_env.yaml  default.conf  docker-compose.yml  index.html  main.cfg  oas.cfg  requirements.txt  skaffold-argo.yaml
docker/ets-ogcapi-processes/: Dockerfile  build-ets-part2.sh  build.sh  docker-compose-ets-part.yml  test-part2.sh  test-run-ogcapi-processes-2.xml  test-run-props.xml  test-run-wps20.xml  test.sh
docker/hpgc/: Dockerfile  ades-dev_env.yaml  docker-compose.yml  dockerfile-compose.yml  main.cfg  oas.cfg  startUp.sh
docker/mdl4eo/: Dockerfile  docker-compose.yml  main.cfg  oas.cfg  requirements.txt
docker/nuxt-client/: Dockerfile  ZOO-Kernel.dockerfile  default.conf  docker-compose-ko.yml  env_nuxt.sample  nuxtclient.conf
docker/ubuntugis/: .htaccess  000-default.conf  main.cfg  oas.cfg
docker/websocketd/: Dockerfile
docs/: ETS_setup.rst  Makefile  _config.yml  conf.py  contents.rst  copyright.txt  documentation.txt  index.rst  index.txt  intro.rst  keycloak.rst  make.bat
docs/_static/: basic.css  default.css  minikube_upgrade_output.txt  my-minio-fs.yaml
docs/_templates/: indexsidebar.html  layout.html
docs/api/: classes.rst  classes.txt  description.rst  description.txt  examples.rst  examples.txt  howto.rst  index.rst  index.txt  what.rst  zoo-bounds.txt  zoo-feature.txt  zoo-format-geojson.txt  zoo-format-gml.txt  zoo-format-json.txt  zoo-format-kml.txt  zoo-format-wkt.txt  zoo-format-wps.rst  zoo-format-wps.txt  zoo-format.txt  zoo-geometry-collection.txt  zoo-geometry-curve.txt  zoo-geometry-linearring.txt  zoo-geometry-linestring.txt  zoo-geometry-multilinestring.txt  zoo-geometry-multipoint.txt  zoo-geometry-multipolygon.txt  zoo-geometry-point.txt  zoo-geometry-polygon.txt  zoo-geometry-surface.txt  zoo-geometry.txt  zoo-process.rst  zoo-process.txt  zoo-projection.txt  zoo-request.rst  zoo-request.txt  zoo-string.txt  zoo.rst  zoo.txt
docs/client/: example.rst  howto.rst  index.rst  index.txt  introduction.txt  what.rst
docs/community/: developer.txt  developper.txt  index.txt  irc.txt  mailinglist.txt
docs/contribute/: code.rst  contributors.rst  dev.rst  doc.rst  howto.rst  hugo.rst  index.rst  release.rst  service_providers.rst  translate.rst
docs/development/: documentation.txt
docs/dl/: index.txt
docs/install/: advanced.rst  centos.rst  debian.rst  docker.rst  download.rst  index.rst  install-confoptions.rst  install-download.rst  install-installation.rst  install-onwindows.rst  install-prerequisites.rst  installation.rst  opensuse.rst  optional_features.rst  prerequisites.rst  windows.rst
docs/kernel/: .#dru.rst  configuration.rst  dru.rst  hpc.rst  index.rst  index.txt  install-centos.txt  install-debian.txt  install-mac.txt  install-opensuse.txt  install-prerequisites.txt  install-unix.txt  install-windows.txt  what.rst  (+8 more)
testing/: README  extractExceptionInfo.xsl  extractStatusLocation.xsl  run.sh
thirds/otb2zcfg/: CMakeLists.txt  README.txt  otb2zcfg.cxx
workshop/: conf.py  contents.rst  index.rst
zoo-kernel/: Makefile.in  README  ZOOMakefile.opts.in  configure.ac  main.cfg  main_conf_read.l  main_conf_read.y  makefile.vc  nmake.opt  service.c  service.h  service_conf.l  service_conf.y  service_internal.c  service_internal.h  service_internal_java.c  service_internal_java.h  service_internal_js.c  service_internal_js.h  service_internal_ms.c  service_internal_ms.h  service_internal_perl.c  service_internal_php.c  service_internal_python.c  service_internal_python.h  service_loader.c  ulinet.c  ulinet.h  zoo_loader.c  zoo_service_loader.c
zoo-kernel/locale/po/: en_US.utf8.po  messages.po
zoo-project/: COMMITERS  COMMITTERS  HISTORY.txt  LICENSE
zoo-project/zoo-kernel/: .#test.json  Doxyfile  Makefile.in  README  ZOOMakefile.opts.in  caching.c  caching.h  configure.ac  main.cfg  main.cfg.in  main_conf_read.l  main_conf_read.y  makefile.vc  meta_sql.c  meta_sql.h  mimetypes.h  nmake.opt  oas.cfg  otbWrapperApplication.h  otbZooWatcher.cxx  otbZooWatcher.h  request_parser.c  request_parser.h  response_print.c  response_print.h  server_internal.c  server_internal.h  service.c  service.h  service_callback.c  service_callback.h  service_conf.l  service_conf.y  service_internal.c  service_internal.h  service_internal_amqp.c  service_internal_amqp.h  service_internal_gdal.c  service_internal_gdal.h  service_internal_hpc.c  (+52 more)
zoo-project/zoo-kernel/bdd/: schema.sql
zoo-project/zoo-kernel/doc/: index.dox
zoo-project/zoo-kernel/locale/.cache/: my_service_string_to_translate.c
zoo-project/zoo-kernel/locale/po/: cs.po  de.po  es.po  es_AR.po  fi.po  fr_FR.po  fr_FR.utf8.po  it_IT.po  ja.po  ja_JP.po  ja_JP.utf8.po  messages.po  zh_CN.po
zoo-project/zoo-kernel/scripts/: extract_strings.sh
zoo-project/zoo-kernel/sql/: async_amqp.sql  schema.sql  zoo_collectiondb.sql
zoo-project/zoo-kernel/xslt/: updateExecute.xsl
(+631 files in other folders)
